@@ -7,6 +7,8 @@
 - force svn+ssh:// URLs to be in BatchMode, in order to not have any
   interactivity at all with ssh
 - fixed incompatibility with Python-2.4 on urlparse
+- fixed emptylog message, which was not being shown when needed
+- template: hide the first release when it has only invisible lines
 - fixed bad url used when using -v in getsrpm
 - make 'repsys submit' without package name or revision number work again
 - if REPSYS_CONF is set, /etc/repsys.conf and ~/.repsys/config will not be
